--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- nav -->
+  <nav>
+    <a href="index.html" class="logo"><i class="fas fa-camera"></i>&nbsp;Photogenix</a>
+    <ul>
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="pricing.html">Pricing</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
   
   
 </body>
