--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
+  <!-- header -->
+  <header>
+    <div class="container">
+      <h1>Photo studio</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, a!</p>
+      <button>Contact us</button>
+    </div>
+  </header>
   
   
 </body>
