--- a/pricing.html
+++ b/pricing.html
@@ -1,1 +1,81 @@
-<h1>Pricing</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photogenix</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- nav -->
+  <nav>
+    <a href="index.html" class="logo"><i class="fas fa-camera"></i>&nbsp;Photogenix</a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li class="active"><a href="pricing.html">Pricing</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  
+<!-- footer -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <h4><i class="fas fa-camera"></i>&nbsp;Fhoto studio</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, error. Repellendus nobis neque quod ducimus.</p>
+        <a href=""><i class="fab fa-facebook-square"></i></a>
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-youtube-square"></i></a>
+      </div>
+      <div class="col-3">
+        <h5>Instagram</h5>
+        <img src="img/footer1.jpg" alt="">
+        <img src="img/footer2.jpg" alt="">
+        <img src="img/footer3.jpg" alt="">
+        <img src="img/footer1.jpg" alt="">
+        <img src="img/footer2.jpg" alt="">
+        <img src="img/footer3.jpg" alt="">
+        <img src="img/footer1.jpg" alt="">
+        <img src="img/footer2.jpg" alt="">
+      </div>
+      <div class="col-3">
+        <h5>Quick links</h5>
+        <div class="row">
+          <div class="col-6">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li><a href="">Gallery</a></li>
+              <li><a href="">Portfolio</a></li>
+              <li><a href="">Services</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <h5>Subscribe</h5>
+        <form>
+          <input type="email" placeholder="Email" >
+          <button><i class="fas fa-paper-plane"></i></button>
+        </form>
+      </div>
+    </div>
+    <div class="row copy">
+      <p>&copy; 2022. by Photogenix</p>
+    </div>
+  </div>
+</footer>
+  
+  
+</body>
+</html>
