--- a/about.html
+++ b/about.html
@@ -19,62 +19,89 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  
-<!-- footer -->
-<footer>
-  <div class="container">
+
+  <!-- about -->
+  <section class="about">
     <div class="row">
-      <div class="col-3">
-        <h4><i class="fas fa-camera"></i>&nbsp;Fhoto studio</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, error. Repellendus nobis neque quod ducimus.</p>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-youtube-square"></i></a>
-      </div>
-      <div class="col-3">
-        <h5>Instagram</h5>
-        <img src="img/footer1.jpg" alt="">
-        <img src="img/footer2.jpg" alt="">
-        <img src="img/footer3.jpg" alt="">
-        <img src="img/footer1.jpg" alt="">
-        <img src="img/footer2.jpg" alt="">
-        <img src="img/footer3.jpg" alt="">
-        <img src="img/footer1.jpg" alt="">
-        <img src="img/footer2.jpg" alt="">
-      </div>
-      <div class="col-3">
-        <h5>Quick links</h5>
+      <div class="col-6">
+        <h2>CAPTURING THE MOMENTS THAT CAPTIVATE YOUR HEART</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing, tempor incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan lacus vel facilisis. All these taglines are owned by their respective owners, and we do not have any copyright on them.</p>
         <div class="row">
-          <div class="col-6">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-6">
-            <ul>
-              <li><a href="">Gallery</a></li>
-              <li><a href="">Portfolio</a></li>
-              <li><a href="">Services</a></li>
-            </ul>
-          </div>
+          <h3>PROFESSIONALISM</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eos aliquam maiores deleniti consectetur assumenda reiciendis, similique. Eum corrupti, ea.</p>
+        </div>
+        <div class="row">
+          <h3>INDIVIDUAL APPROACH</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eos aliquam maiores deleniti consectetur assumenda reiciendis, similique. Eum corrupti, ea.</p>
+        </div>
+        <div class="row">
+          <h3>FLEXIBLE SCHEDULE</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eos aliquam maiores deleniti consectetur assumenda reiciendis, similique. Eum corrupti, ea.</p>
+        </div>
+        <div class="row">
+          <h3>EXPERIENCE</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eos aliquam maiores deleniti consectetur assumenda reiciendis, similique. Eum corrupti, ea.</p>
         </div>
       </div>
-      <div class="col-3">
-        <h5>Subscribe</h5>
-        <form>
-          <input type="email" placeholder="Email" >
-          <button><i class="fas fa-paper-plane"></i></button>
-        </form>
+      <!-- <div class="col-6"></div> -->
+    </div>
+  </section>
+
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-3">
+          <h4><i class="fas fa-camera"></i>&nbsp;Fhoto studio</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, error. Repellendus nobis neque quod ducimus.</p>
+          <a href=""><i class="fab fa-facebook-square"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href=""><i class="fab fa-youtube-square"></i></a>
+        </div>
+        <div class="col-3">
+          <h5>Instagram</h5>
+          <img src="img/footer1.jpg" alt="">
+          <img src="img/footer2.jpg" alt="">
+          <img src="img/footer3.jpg" alt="">
+          <img src="img/footer1.jpg" alt="">
+          <img src="img/footer2.jpg" alt="">
+          <img src="img/footer3.jpg" alt="">
+          <img src="img/footer1.jpg" alt="">
+          <img src="img/footer2.jpg" alt="">
+        </div>
+        <div class="col-3">
+          <h5>Quick links</h5>
+          <div class="row">
+            <div class="col-6">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Services</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <h5>Subscribe</h5>
+          <form>
+            <input type="email" placeholder="Email" >
+            <button><i class="fas fa-paper-plane"></i></button>
+          </form>
+        </div>
+      </div>
+      <div class="row copy">
+        <p>&copy; 2022. by Photogenix</p>
       </div>
     </div>
-    <div class="row copy">
-      <p>&copy; 2022. by Photogenix</p>
-    </div>
-  </div>
-</footer>
+  </footer>
   
   
 </body>
