--- a/about.html
+++ b/about.html
@@ -98,6 +98,12 @@
       </div>
     </div>
   </section>
+  <!-- promote -->
+  <section class="promote">
+    <h2>Wanna promote your brand</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum esse, qui blanditiis explicabo et ducimus corrupti tenetur minus cupiditate temporibus!</p>
+    <button>Contact Us</button>
+  </section>
 
   <!-- footer -->
   <footer>
