--- a/about.html
+++ b/about.html
@@ -98,11 +98,47 @@
       </div>
     </div>
   </section>
+
   <!-- promote -->
   <section class="promote">
     <h2>Wanna promote your brand</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum esse, qui blanditiis explicabo et ducimus corrupti tenetur minus cupiditate temporibus!</p>
     <button>Contact Us</button>
+  </section>
+
+  <!-- testimonials  -->
+  <section class="testimonials container">
+    <h2>What the clients say?</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatum consequuntur mollitia repellendus odit. Perferendis possimus rem nemo facilis vitae!</p>
+    <article class="row">
+      <div class="col-4">
+        <img src="img/client1.jpg" alt="">
+        <div class="hgroup">
+          <h3>Ronnie Black</h3>
+          <p>@ronnie</p>
+        </div>
+        <div class="clearfix"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad repellendus totam suscipit porro doloribus magni pariatur quis id maiores! Et.</p>
+      </div>
+      <div class="col-4">
+        <img src="img/client2.jpg" alt="">
+        <div class="hgroup">
+          <h3>Dafnie Roth</h3>
+          <p>@dafnie</p>
+        </div>
+        <div class="clearfix"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad repellendus totam suscipit porro doloribus magni pariatur quis id maiores! Et.</p>
+      </div>
+      <div class="col-4">
+        <img src="img/client3.jpg" alt="">
+        <div class="hgroup">
+          <h3>Julia Marx</h3>
+          <p>@julia</p>
+        </div>
+        <div class="clearfix"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad repellendus totam suscipit porro doloribus magni pariatur quis id maiores! Et.</p>
+      </div>
+    </article>
   </section>
 
   <!-- footer -->
@@ -160,7 +196,5 @@
       </div>
     </div>
   </footer>
-  
-  
 </body>
 </html>
