--- a/pricing.html
+++ b/pricing.html
@@ -20,7 +20,68 @@
     </ul>
   </nav>
 
- 
+  <!-- pricingHeader -->
+  <header></header>
+
+  <!-- pricing -->
+  <section class="pricing container">
+    <h2>Service & Optimal price</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsum at quidem dicta incidunt explicabo recusandae temporibus quos cum quas?</p>
+    <article class="row">
+      <div class="col-3">
+        <div class="wrapper">
+          <h3>Basic</h3>
+          <h4>$99</h4>
+          <ul>
+            <li>up to 30 photos</li>
+            <li>no retoushed photos</li>
+            <li>no make-up</li>
+            <li>no stylist assistance</li>
+          </ul>
+          <button>get appointment</button>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="wrapper">
+          <h3>Standard</h3>
+          <h4>$199</h4>
+          <ul>
+            <li>up to 30 photos</li>
+            <li>no retoushed photos</li>
+            <li>no make-up</li>
+            <li>no stylist assistance</li>
+          </ul>
+          <button>get appointment</button>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="wrapper">
+          <h3>Extended</h3>
+          <h4>$599</h4>
+          <ul>
+            <li>up to 30 photos</li>
+            <li>no retoushed photos</li>
+            <li>no make-up</li>
+            <li>no stylist assistance</li>
+          </ul>
+          <button>get appointment</button>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="wrapper">
+          <h3>Ultimate</h3>
+          <h4>$999</h4>
+          <ul>
+            <li>up to 30 photos</li>
+            <li>no retoushed photos</li>
+            <li>no make-up</li>
+            <li>no stylist assistance</li>
+          </ul>
+          <button>Get appointment</button>
+        </div>
+      </div>
+    </article>
+  </section>
   
   <!-- footer -->
   <footer>
