--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
     </ul>
   </nav>
 
+  <section class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2808.4924127849417!2d19.85170621581475!3d45.25805605519552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475b1065ad95c021%3A0x63b0f0bb76f12209!2z0JrQvtC30LDRh9C40L3RgdC60L7QsyA1LCDQndC-0LLQuCDQodCw0LQ!5e0!3m2!1ssr!2srs!4v1646490877269!5m2!1ssr!2srs" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </section>
+
   
   <!-- footer -->
   <footer>
