--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,51 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2808.4924127849417!2d19.85170621581475!3d45.25805605519552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475b1065ad95c021%3A0x63b0f0bb76f12209!2z0JrQvtC30LDRh9C40L3RgdC60L7QsyA1LCDQndC-0LLQuCDQodCw0LQ!5e0!3m2!1ssr!2srs!4v1646490877269!5m2!1ssr!2srs" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </section>
 
+  <section class="contact container">
+    <div class="row">
+      <div class="col-6">
+        <h2>Get in touch</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque cumque quisquam fuga quas aperiam totam quaerat beatae dicta, molestias nemo!</p>
+        <div class="row">
+          <div class="col-1">
+            <i class="fas fa-map-marker-alt"></i>
+          </div>
+          <div class="col-11">
+            <h5>Adress</h5>
+            <p>Kozacinskog 5, Novi Sad</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-1">
+            <i class="fas fa-phone"></i>
+          </div>
+          <div class="col-11">
+            <h5>Phone</h5>
+            <p>987 456 123</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-1">
+            <i class="fas fa-envelope"></i>
+          </div>
+          <div class="col-11">
+            <h5>Email</h5>
+            <p>info@photogenix.com</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <h2>Work with us</h2>
+        <form>
+          <input type="text" placeholder="Name">
+          <input type="email" placeholder="Email">
+          <input type="text" placeholder="website">
+          <textarea cols="30" rows="10" placeholder="Massage"></textarea>
+          <button>Send message</button>
+        </form>
+      </div>
+    </div>
+  </section>
   
   <!-- footer -->
   <footer>
